--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1541,7 +1541,7 @@
       </div>
 
       <p>
-        There is a great variety of parametric surfaces you can explore, or that you can create:
+        You can explore a wide range of parametric surfaces or even create your own.
       </p>
 
       
