--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1550,7 +1550,7 @@
         <iframe loading="lazy" width="100%" height="270px" scrolling="no" style="border: 0px solid black; overflow: hidden; margin-top: 10px;" src="applets/threejs/parametric-surfaces-preview"></iframe>
         <br>
         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="http://www.3d-meier.de/tut3/Seite0.html" target="_blank">
-          Parametrische Flächen und Körper <i class="fas fa-external-link-alt"></i>
+          Parametric Surfaces and Solids <i class="fas fa-external-link-alt"></i>
         </a>
       </div>
 
