--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1552,6 +1552,10 @@
         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="http://www.3d-meier.de/tut3/Seite0.html" target="_blank">
           Parametric Surfaces and Solids <i class="fas fa-external-link-alt"></i>
         </a>
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://codepen.io/wakana-k/full/poBBRmN"
+          target="_blank">
+          Source code: Wakana Y.K. <i class="fas fa-external-link-alt"></i>
+        </a>
       </div>
 
       <br>
