--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1472,7 +1472,7 @@
         </div>
         <p>
           Now the point $P=(1,1,3) $ corresponds to $u=1,$ $v=1,$
-          since $u^2=1,$ $v^2=1, $u+2v=3;$
+          since $u^2=1,$ $v^2=1,$ $u+2v=3;$
           and
           \[
           \r_u\times \r_v\big|_{(1,1)} =-2~\i-4~\j+4~\k .
