--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -2291,7 +2291,7 @@
         <p>
           where
           \[
-          S_1=\text{Cylinder},\quad S_2=\text{Top disk},\quad \text{and }\quad S_3=\text{Bottom disc}.
+          S_1=\text{Cylinder},\quad S_2=\text{Top disc},\quad \text{and }\quad S_3=\text{Bottom disc}.
           \]
         </p>
         <p>
@@ -2346,7 +2346,7 @@
         </div>
 
         <p>
-          Now, on $S_2$: In this case we have a disk on the plane $z=2.$
+          Now, on $S_2$: In this case we have a disc on the plane $z=2.$
           Then, a parametrization is
           given by
           \[
@@ -2383,7 +2383,7 @@
         </div>
 
         <p>
-          Finally, on $S_3$: Finally, we have another disk on the plane $z=0$ ($xy$-plane).
+          Finally, on $S_3$: Finally, we have another disc on the plane $z=0$ ($xy$-plane).
           Then, a parametrization is
           given by
           \[
