--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -2269,7 +2269,7 @@
 
         
 
-        <!--<div style="text-align: center;">
+        <div style="text-align: center;">
           <iframe loading="lazy" width="70%" height="500px" scrolling="no"
         style="border: 1px solid black; overflow: hidden; margin-top: 10px;" 
         src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
@@ -2278,7 +2278,7 @@
           href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
           Fullscreen <i class="fas fa-external-link-alt"></i>
           </a>
-        </div>-->
+        </div>
 
         <p>
           To find the net outward flux we need to evaluate the following integral:
