--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -34,8 +34,16 @@
   <link rel="stylesheet" href="css/style.css">
 
 
+
   <!-- Google tag (gtag.js) -->
- 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB7YP0C670"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XB7YP0C670');
+  </script>
 
   <!-- MathCell applets + MathJax -->
   <script src="js/math.js"></script>
@@ -56,7 +64,7 @@
       <div class="dot"></div>
     </div>
     <div class="loadingMessage">Loading...</div>
-  </div> 
+  </div>
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
@@ -2269,7 +2277,7 @@
 
         
 
-        <div style="text-align: center;">
+        <!--<div style="text-align: center;">
           <iframe loading="lazy" width="70%" height="500px" scrolling="no"
         style="border: 1px solid black; overflow: hidden; margin-top: 10px;" 
         src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
@@ -2278,7 +2286,7 @@
           href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
           Fullscreen <i class="fas fa-external-link-alt"></i>
           </a>
-        </div>
+        </div>-->
 
         <p>
           To find the net outward flux we need to evaluate the following integral:
