--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -34,8 +34,16 @@
   <link rel="stylesheet" href="css/style.css">
 
 
+
   <!-- Google tag (gtag.js) -->
- 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB7YP0C670"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XB7YP0C670');
+  </script>
 
   <!-- MathCell applets + MathJax -->
   <script src="js/math.js"></script>
@@ -56,7 +64,7 @@
       <div class="dot"></div>
     </div>
     <div class="loadingMessage">Loading...</div>
-  </div> 
+  </div>
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
