--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 
 
   <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB7YP0C670"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XB7YP0C670');
+  </script>
  
 
   <!-- MathCell applets + MathJax -->
