--- a/integration-theorems.html
+++ b/integration-theorems.html
@@ -36,13 +36,13 @@
 
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB7YP0C670"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-XB7YP0C670');
+    gtag('config', 'G-F0V5C760K4');
   </script>
 
   <!-- MathCell applets + MathJax -->
