starting new section and fixed some typos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="css/style.css">
 
 
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0V5C760K4"></script>
   <script>
@@ -43,7 +44,6 @@
 
     gtag('config', 'G-F0V5C760K4');
   </script>
- 
 
   <!-- MathCell applets + MathJax -->
   <script src="js/math.js"></script>
@@ -55,8 +55,6 @@
 </head>
 
 <body data-type="book" id="top">
-
-  
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
@@ -351,14 +349,14 @@
 
     <div class="w3-col m6">
       <span class="w3-hide-small">
-        Real Analysis <i class="fa-regular fa-copyright"></i>
+        Vector Calculus <i class="fa-regular fa-copyright"></i>
         <span>
           <script>document.write(new Date().getFullYear());</script>
         </span><br />
         by J. C. Ponce Campuzano
       </span>
       <span class="w3-hide-large w3-hide-medium">
-        Real Analysis <i class="fa-regular fa-copyright"></i>
+        Vector Calculus <i class="fa-regular fa-copyright"></i>
         <span>
           <script>document.write(new Date().getFullYear());</script>
         </span>
