--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -2558,14 +2558,14 @@
 
     <div class="w3-col m6">
       <span class="w3-hide-small">
-        Real Analysis <i class="fa-regular fa-copyright"></i>
+        Vector Calculus <i class="fa-regular fa-copyright"></i>
         <span>
           <script>document.write(new Date().getFullYear());</script>
         </span><br />
         by J. C. Ponce Campuzano
       </span>
       <span class="w3-hide-large w3-hide-medium">
-        Real Analysis <i class="fa-regular fa-copyright"></i>
+        Vector Calculus <i class="fa-regular fa-copyright"></i>
         <span>
           <script>document.write(new Date().getFullYear());</script>
         </span>
