--- a/vector-valued-functions.html
+++ b/vector-valued-functions.html
@@ -164,13 +164,19 @@
       </div>
 
       <p>
-        Hi there! Sorry this chapter is still under construction 🚧!
+        Hi there! Sorry, this chapter is still under 🚧 construction 🚧
         In the mean time enjoy this beautiful animation:
       </p>
 
       <iframe frameborder="0" height="500px" scrolling="no" src="https://www.dynamicmath.xyz/threejs/hyperbolic-helicoid/smooth.html" style="border: 1px solid black; overflow: hidden;" width="100%">
       </iframe>
 
+      <div style="text-align: center;">
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://www.patreon.com/jcponce" target="_blank">
+          Support this project in Patreon <i class="fa-brands fa-patreon"></i>
+        </a>
+      </div>
+      <hr>
 
 
     </div>
@@ -268,14 +274,14 @@
 
     <div class="w3-col m6">
       <span class="w3-hide-small">
-        Real Analysis <i class="fa-regular fa-copyright"></i>
+        Vector Calculus <i class="fa-regular fa-copyright"></i>
         <span>
           <script>document.write(new Date().getFullYear());</script>
         </span><br />
         by J. C. Ponce Campuzano
       </span>
       <span class="w3-hide-large w3-hide-medium">
-        Real Analysis <i class="fa-regular fa-copyright"></i>
+        Vector Calculus <i class="fa-regular fa-copyright"></i>
         <span>
           <script>document.write(new Date().getFullYear());</script>
         </span>
