--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -95,6 +95,7 @@
             <a class="w3-bar-item w3-button" href="#section-3"> Fubini's Theorem</a>
             <a class="w3-bar-item w3-button" href="#section-4"> Double Integrals Over
     General Regions</a>
+            <a class="w3-bar-item w3-button" href="#section-5"> Doble Integrals in Polar Coordinates</a>
     </div>
 
     <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">6. Applications of
