--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1587,7 +1587,7 @@
       </p>
       <div class="eqwrapper">
         \[
-        R = \left\{(x,y,z)~|~ (x,z)\in D,~ r(x,z)leq z \leq s(x,z) \right\}
+        R = \left\{(x,y,z)~|~ (x,z)\in D,~ r(x,z)\leq z \leq s(x,z) \right\}
         \]
       </div>
       <p>
@@ -1601,7 +1601,7 @@
       </div>
 
       <p>
-        In each of Equations (\ref{type-1}) and (\ref{type-3}) there may be two
+        For each of the equations (\ref{type-1}) and (\ref{type-3}) there may be two
         possible expressions for the integral
         depending on whether $D$ is a type I or type II plane
         region, similar to to Equations (\ref{type-1-type-I}) and (\ref{type-1-type-II}).
