--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1507,7 +1507,7 @@
       </p>
       <div class="eqwrapper">
         \[
-        R = \left\{(x,y,z)~|~ (x,y)\in D,~ r(x,y)leq z \leq s(x,y) \right\}
+        R = \left\{(x,y,z)~|~ (x,y)\in D,~ r(x,y)\leq z \leq s(x,y) \right\}
         \]
       </div>
       <p>
