--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1607,6 +1607,56 @@
         region, similar to to Equations (\ref{type-1-type-I}) and (\ref{type-1-type-II}).
       </p>
 
+      <div class="example">
+        Evaluate $\ds\iiint_R z~dV$ over the region $R$
+        bounded by the surfaces $x=0,$ $y=0,$ $z=0$ and
+        $x+y+z=1.$
+
+        <p>
+          You can explore this region in the following applet:
+        </p>
+        <div style="text-align: center;">
+          <iframe loading="lazy" scrolling="no" title="Chapter-30-2: Example" src="https://www.geogebra.org/material/iframe/id/g8xv84xu/width/604/height/432/border/888888/sfsb/false/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/true" width="604px" height="432px" style="border:0px;" allowfullscreen=""> </iframe>
+        </div>
+
+        <p>There are different ways to compute the integral.
+          First, let's integrate with respect to $z.$
+          Then $0\leq z \leq 1-x-y.$
+          Thus
+        </p>
+        <div class="eqwrapper">
+          \[
+          \iiint_R z~dV = \iint_{D_{xy}} \left[ \int_{z=0}^{z=1-x-y}z~dz\right]dA_{xy}
+          \]
+        </div>
+        <p>
+          here $D_{xy}$ is the projection of $R$ on the $xy$-plane.
+        </p>
+        <p>The region $R$ is bounded by $x=0,$ $y=0$ and the intersection
+          of $z=0$ with $z=1-x-y,$
+          i.e., $0=1-x-y,$ or $x+y=1.$
+        </p>
+
+        <p>This region $D_{xy}$ is of both types (I and II).
+          Consider $D_{xy}$ as a type I region.
+          Then
+        </p>
+        <div class="eqwrapper">
+          \begin{eqnarray*}
+          \iiint_R z~dV &amp;=&amp; \iint_{D_{xy}} \left[ \int_{z=0}^{z=1-x-y}z~dz\right]dA_{xy}\\
+          &amp;=&amp; \int _{x=0}^{x=1} \int_{y=0}^{y=1-x} \left[ \int_{z=0}^{z=1-x-y}z~dz \right]dy~dx\\
+          &amp;=&amp; \int _{x=0}^{x=1} \int_{y=0}^{y=1-x} \left[\frac{z^2}{2}\bigg|_{z=0}^{z=1-x-y} \right]dy~dx\\
+          &amp;=&amp; \int _{x=0}^{x=1} \int_{y=0}^{y=1-x} \frac{(1-x-y)^2}{2} dy~dx\\
+          &amp;=&amp;  \int _{x=0}^{x=1} \left[ -\frac{1}{6}\left( 1-y-x \right)^3 \bigg|_{y=0}^{y=1-x} \right]dx\\
+          &amp;=&amp;  \int _{x=0}^{x=1} \frac{1}{6}\left(1-x \right)^3dx\\
+          &amp;=&amp; -\frac{1}{24}\left(1-x\right)^4 \Bigg|_{x=0}^{x=1} \\
+          &amp;=&amp; \frac{1}{24}.
+          \end{eqnarray*}
+        </div>
+
+
+      </div>
+
     </div>
 
 
